Fix event on touch 3 try +/- signs on mobile to right panel on galleries

--- a/resources/static/css/gallery.css
+++ b/resources/static/css/gallery.css
@@ -46,12 +46,17 @@
   margin-top:-42px;
   margin-right:-30px;
   padding-top:5px !important;
-
 }
 .gallerysidebar #sidetoggle:before{
   content:"+";
 }
 .gallerysidebar:hover #sidetoggle:before{
+  content:"-";
+}
+.gallerysidebar.hideside #sidetoggle:before{
+  content:"+";
+}
+.gallerysidebar.showside #sidetoggle:before{
   content:"-";
 }
 .gallerysidebar #sidetoggle{
@@ -76,7 +81,12 @@
   border-color:#ccc;
   border-style:solid;
 }
-
+.gallerysidebar.hideside{
+  visibility:hidden !important;
+}
+.gallerysidebar.showside{
+  visibility:visible !important;
+}
 .galleryitem {
   background: #fff;
 	border: 0px;
@@ -518,12 +528,7 @@ div#category_desc {
   color:#333;
   display:none;
 }
-.gallerysidebar #sidetoggle:before{
-  content:"+";
-}
-.gallerysidebar:hover #sidetoggle:before{
-  content:"+";
-}
+
 .page.gallery .galleryitem  a.link > img,
 .page.gallery    a.link > .galleryitem > img {
   border:none;
